--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,20 @@
-/* src/index.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
   height: 100%;
+  width: 100%;
 }
 
 body {
-  font-family: Playfair Display;
+  font-family: "Roboto";
   height: 100vh !important;
   margin: 0;
   /* overflow: hidden; */
+}
+
+html,
+#root {
+  height: 100%;
 }
