--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,17 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  font-family: Playfair Display;
+}
+
 
 :root {
   height: 100%;
 }
 
 body {
-  font-family: Playfair Display;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   height: 100vh !important;
   margin: 0;
   /* overflow: hidden; */
