--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,10 @@
 }
 
 body {
-  font-family: Playfair Display;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100vh !important;
   margin: 0;
-  /* overflow: hidden; */
+  /* overflow: hidden; Roboto */
 }
 
 html,
