--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,9 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+.bg2 {
+  background: url("https://konstruk.rstheme.com/assets/counter-bg-DLogBSyy.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
