--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,76 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+.icon-image {
+  background: #ffda31;
+  padding: 15px 20px;
+}
+
+.services-item {
+  background-color: rgba(255, 255, 255, 0.9);
+  transition: background-color 0.5s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.services-item:hover {
+  background-color: rgba(255, 255, 255, 0.7); /* Transparent effect */
+}
+
+.services-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #fff;
+  /* padding: 15px 30px; */
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0; /* Stay in its default position */
+  transition: transform 0.5s ease; /* Smooth slide effect */
+  transform: translateX(0); /* Default state */
+}
+
+.services-item:hover .services-content {
+  transform: translateX(100%); /* Slide to the right on hover */
+}
+.services-titles{
+  padding-left: 20px;
+  padding-top: 8px;
+}
+
+ .services-image img {
+    width: 100%;
+    height: auto;
+    max-width: unset;
+}
+.icon-top {
+  background: #ffda31;
+  display: inline-block;
+  margin-bottom: 20px;
+  padding: 15px;
+  border-radius: 50%;
+}
+
+
+.services-item .service-description{
+  align-items: center;
+  flex-direction: column;
+  display :flex;
+  justify-content: center;
+  text-align: center;
+  position: absolute; 
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top:0;
+  padding: 20px;
+  background-color: #0000009c;
+  opacity: 0; /* Fully transparent */
+  visibility: hidden; /* Makes it inaccessible */
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+.services-item:hover .service-description {
+  opacity: 1; /* Fully visible */
+  visibility: visible; /* Makes it accessible */
+}
