--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   font-family: Playfair Display;
 }
 
+.font-robot {
+  font-family: Roboto;
+}
+
 .bg1 {
   background: url("https://konstruk.rstheme.com/assets/about-bg-CuSu5v4z.jpg");
   background-position: center center;
